Feign中的服务降级

--- a/springcloud06-feign-service/src/main/resources/application.yml
+++ b/springcloud06-feign-service/src/main/resources/application.yml
@@ -9,3 +9,8 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8001/eureka/
+
+#开启Hystrix功能
+feign:
+  hystrix:
+    enabled: true
