--- a/springcloud04-user-service/src/main/resources/application.yml
+++ b/springcloud04-user-service/src/main/resources/application.yml
@@ -3,6 +3,13 @@ server:
 spring:
   application:
     name: user-service
+  #配置收集日志的zipkin-server访问地址
+  zipkin:
+    base-url: http://localhost:9411
+  #设置Sleuth的抽样收集概率
+  sleuth:
+    sampler:
+      probability: 0.1
 #  zipkin:
 #    base-url: http://localhost:9411
 eureka:
